@@ -1,3 +1,8 @@
+1999-08-14  Ross Johnson  <rpj@ixobrychus.canberra.edu.au>
+
+	* exit.c (pthread_exit): Don't call pthread_self() but
+	get thread handle directly for efficiency.
+	
 1999-08-12  Ross Johnson  <rpj@ixobrychus.canberra.edu.au>
 
 	* private.c (_pthread_threadStart): ei[] only declared if _MSC_VER.
